--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <h1>Object Detection</h1>
     <button id="startButton">Start Detection</button>
     <div id="videoContainer">
-        <img id="videoFeed" src="{{ url_for('video_feed') }}" alt="Video Feed">
+        <!-- Video will be displayed here -->
     </div>
     <script>
         document.getElementById('startButton').addEventListener('click', function() {
@@ -18,6 +18,7 @@
             }).then(response => {
                 if (response.ok) {
                     console.log('Detection started successfully!');
+                    // You can add code here to display the video if required
                 } else {
                     console.error('Failed to start detection');
                 }
