--- a/templates/index.html
+++ b/templates/index.html
@@ -84,24 +84,14 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
+        <!-- <img src="assets/img/logo.png" alt=""> -->
         <span class="d-none d-lg-block">Smart-Surveillance-System</span>
       </a>
       <!-- <i class="bi bi-list toggle-sidebar-btn"></i> -->
-    </div><!-- End Logo -->
-
-    
+    </div>
 
     <nav class="header-nav ms-auto">
       <ul class="d-flex align-items-center">
-
-        
-        
-
-        
-
-        
-
         <li class="nav-item dropdown pe-3">
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
@@ -150,13 +140,6 @@
               <hr class="dropdown-divider">
             </li>
 
-            <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
-                <span>Sign Out</span>
-              </a>
-            </li>
-
           </ul><!-- End Profile Dropdown Items -->
         </li><!-- End Profile Nav -->
 
@@ -193,6 +176,28 @@
                   <h5 class="card-title">Object Detection<span>not done</span></h5>
                   <button id="startButton">Start Detection</button>
                   <button id="stopButton">Stop Detection</button>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
+                  
+
                   <div id="videoContainer">
                       <!-- Video will be displayed here -->
                   </div>
