--- a/templates/index.html
+++ b/templates/index.html
@@ -173,8 +173,14 @@
               <div class="card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Object Detection<span>not done</span></h5>
-                  <button id="startButton">Start Detection</button>
+                  <h5 class="card-title">Object Detection</h5>
+                  <button id="startButton" style=" 
+                  background-color: greenyellow;
+                  font-size: 25px;
+                  border-radius: 15px;
+                  font-style: italic;
+              
+              ">Start Detection</button>
                   <button id="stopButton">Stop Detection</button>
                   <br>
                   <br>
