--- a/templates/index.html
+++ b/templates/index.html
@@ -175,13 +175,22 @@
                 <div class="card-body">
                   <h5 class="card-title">Object Detection</h5>
                   <button id="startButton" style=" 
-                  background-color: greenyellow;
+                  background-color: #91cc75;
+                  font-size: 25px;
+                  border-radius: 15px;
+                  padding: 15px;
+              
+              ">Start Detection</button>
+                  <button id="stopButton" style="
+                  background-color: #ee6666;
                   font-size: 25px;
                   border-radius: 15px;
                   font-style: italic;
-              
-              ">Start Detection</button>
-                  <button id="stopButton">Stop Detection</button>
+                  padding: 15px;
+                  font-style: normal;
+              "
+                  
+                  >Stop Detection</button>
                   <br>
                   <br>
                   <br>
