--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
   </header><!-- End Header -->
 
 
-  <main id="main" class="main">
+  <main id="main" class="main" style="margin-top:0;">
 
     <div class="pagetitle">
       <h1>Dashboard</h1>
@@ -173,12 +173,25 @@
               <div class="card">
 
                 <div class="card-body">
-                  <h5 class="card-title">Object Detection</h5>
+                  <h1 class="card-title"  style="
+                  font-size: 30px;
+                  /* background: aliceblue; */
+                  /* font-style: oblique; */
+                  padding: 15px;">Object Detection
+            
+                  </h1>
                   <button id="startButton" style=" 
                   background-color: #91cc75;
                   font-size: 25px;
                   border-radius: 15px;
                   padding: 15px;
+                  border-block-width: 0px;
+                  border-bottom-width: 0px;
+                  border-right-width: 0px;
+                  border-left-width: 0px;
+                  color: #424242;
+                  font-weight: 700;
+              
               
               ">Start Detection</button>
                   <button id="stopButton" style="
@@ -188,6 +201,12 @@
                   font-style: italic;
                   padding: 15px;
                   font-style: normal;
+                  border-block-width: 0px;
+                  border-bottom-width: 0px;
+                  border-right-width: 0px;
+                  border-left-width: 0px;
+                  color: #424242;
+                  font-weight: 700;
               "
                   
                   >Stop Detection</button>
@@ -244,7 +263,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
+                  <h5 class="card-title">Alerts <span>| Today</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
