--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,9 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="index.html" class="logo d-flex align-items-center" style="width=500px">
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <span class="d-none d-lg-block">Smart-Surveillance-System</span>
+        <span class="d-none d-lg-block" style="width=500px">Smart-Surveillance-System</span>
       </a>
       <!-- <i class="bi bi-list toggle-sidebar-btn"></i> -->
     </div>
@@ -267,7 +267,7 @@
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
+                      <i class="bi bi-alarm"></i>
                     </div>
                     <div class="ps-3">
                       <h6>145</h6>
@@ -305,7 +305,7 @@
                       <i class="bi bi-currency-dollar"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>$3,264</h6>
+                      <h6>Rs.3,264</h6>
                       <span class="text-success small pt-1 fw-bold">8%</span> <span class="text-muted small pt-2 ps-1">increase</span>
 
                     </div>
@@ -334,7 +334,7 @@
                 </div>
 
                 <div class="card-body">
-                  <h5 class="card-title">Customers <span>| This Year</span></h5>
+                  <h5 class="card-title">Crowd <span>| Today</span></h5>
 
                   <div class="d-flex align-items-center">
                     <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
@@ -379,13 +379,13 @@
                     document.addEventListener("DOMContentLoaded", () => {
                       new ApexCharts(document.querySelector("#reportsChart"), {
                         series: [{
-                          name: 'Sales',
+                          name: 'Alerts',
                           data: [31, 40, 28, 51, 42, 82, 56],
                         }, {
                           name: 'Revenue',
                           data: [11, 32, 45, 32, 34, 52, 41]
                         }, {
-                          name: 'Customers',
+                          name: 'Crowd',
                           data: [15, 11, 32, 18, 9, 24, 11]
                         }],
                         chart: {
@@ -449,85 +449,37 @@
 
             <div class="card-body">
               <h5 class="card-title">Recent Activity <span>Twillo here</span></h5>
+              <h6 style="
+              padding: 10px;
+              color: red;
+              box-shadow: 2px 2px 2px 2px #8888;
+          "> ALERT RECIEVED!! Possible Breach - 9:20am </h6>
 
+              <h6 style="
+              padding: 10px;
+              box-shadow: 2px 2px 2px 2px #8888;
+          "
+              > ALERT RECIEVED!! Possible Breach - 8:40pm </h6>
+              <h6 style="
+              padding: 10px;
+              box-shadow: 2px 2px 2px 2px #8888;
+          "> ALERT RECIEVED!! Possible Breach - 8:31pm </h6>
+              <h6 style="
+              padding: 10px;
+              box-shadow: 2px 2px 2px 2px #8888;
+          "
+              > ALERT RECIEVED!! Possible Breach - 1:20pm </h6>
+              <h6 style="
+              padding: 10px;
+              box-shadow: 2px 2px 2px 2px #8888;
+          "> ALERT RECIEVED!! Possible Breach - 12:20pm </h6>
               
 
             </div>
           </div><!-- End Recent Activity -->
 
           <!-- Budget Report -->
-          <div class="card">
-            <div class="filter">
-              <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <li class="dropdown-header text-start">
-                  <h6>Filter</h6>
-                </li>
-
-                <li><a class="dropdown-item" href="#">Today</a></li>
-                <li><a class="dropdown-item" href="#">This Month</a></li>
-                <li><a class="dropdown-item" href="#">This Year</a></li>
-              </ul>
-            </div>
-
-            <div class="card-body pb-0">
-              <h5 class="card-title">Budget Report <span>| This Month</span></h5>
-
-              <div id="budgetChart" style="min-height: 400px;" class="echart"></div>
-
-              <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                  var budgetChart = echarts.init(document.querySelector("#budgetChart")).setOption({
-                    legend: {
-                      data: ['Allocated Budget', 'Actual Spending']
-                    },
-                    radar: {
-                      // shape: 'circle',
-                      indicator: [{
-                          name: 'Sales',
-                          max: 6500
-                        },
-                        {
-                          name: 'Administration',
-                          max: 16000
-                        },
-                        {
-                          name: 'Information Technology',
-                          max: 30000
-                        },
-                        {
-                          name: 'Customer Support',
-                          max: 38000
-                        },
-                        {
-                          name: 'Development',
-                          max: 52000
-                        },
-                        {
-                          name: 'Marketing',
-                          max: 25000
-                        }
-                      ]
-                    },
-                    series: [{
-                      name: 'Budget vs spending',
-                      type: 'radar',
-                      data: [{
-                          value: [4200, 3000, 20000, 35000, 50000, 18000],
-                          name: 'Allocated Budget'
-                        },
-                        {
-                          value: [5000, 14000, 28000, 26000, 42000, 21000],
-                          name: 'Actual Spending'
-                        }
-                      ]
-                    }]
-                  });
-                });
-              </script>
-
-            </div>
-          </div><!-- End Budget Report -->
+          <!-- End Budget Report -->
 
           <!-- Website Traffic -->
           <div class="card">
@@ -580,24 +532,21 @@
                       },
                       data: [{
                           value: 1048,
-                          name: 'Search Engine'
+                          name: 'Total people'
                         },
                         {
                           value: 735,
-                          name: 'Direct'
+                          name: 'Crowd'
                         },
                         {
                           value: 580,
-                          name: 'Email'
+                          name: 'Alerts'
                         },
                         {
                           value: 484,
-                          name: 'Union Ads'
+                          name: 'Crossing'
                         },
-                        {
-                          value: 300,
-                          name: 'Video Ads'
-                        }
+                        
                       ]
                     }]
                   });
